-fixed layout problems

--- a/src/static/css/Override.css
+++ b/src/static/css/Override.css
@@ -785,3 +785,7 @@ td.center.middle {
 .admin-fixed-spacer {
     margin-top: 51px;
 }
+
+.footer-update {
+    background-color: white;
+}
